fix: add align for types--examples

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -827,6 +827,8 @@ $white: #ffffff;
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
     @include for-desktop {
       width: 100%;
       flex-direction: column;
